--- a/stylesheets/_main.scss
+++ b/stylesheets/_main.scss
@@ -16,7 +16,6 @@ $default-transition-delay    : false;
 
 html, body{
   width: 100%;
-  overflow-y: hidden;
 }
 
 html,
@@ -70,7 +69,7 @@ body {
 }
 
 .header-container {
-  margin-top: 45px;
+  padding-top: 45px;
 }
 
 h1 {
